updated directory and profile pages, and src > data so that multiple profiles can be displayed

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Immigrant History Trail</title>
+    <title>China Dispossession Watch</title>
   </head>
   <body>
     <!-- 
